# file-system-agent

./: .gitignore  README.md  pyproject.toml
agents/: directory_agent.py  file_agent_deepseek.py  file_agent_ollama.py  multi_agents.py
agents/prompts/: controller_agent.md  directory_agent.md  file_agent.md  summary_agent.md  tool_agent.md
file_system_cli/: .env  main.py
src/file_system_agent/: __init__.py
src/file_system_agent/agents/: directory_agent.py  file_agent_deepseek.py  file_agent_ollama.py  multi_agents.py
src/file_system_agent/agents/prompts/: controller_agent.md
src/file_system_agent/backend/: generate_agent.py  main.py
src/file_system_agent/backend/html/: index.html
src/file_system_agent/backend/html/assets/: index-H7ccE5-o.js  index-Shs-QgP9.css
src/file_system_agent/file_system_cli/: main.py
src/file_system_agent/front_end/vuetify-template/: README.md  index.html  package-lock.json  package.json  vite.config.js
src/file_system_agent/front_end/vuetify-template/src/: App.vue  main.js
src/file_system_agent/front_end/vuetify-template/src/api/: getMessage.js
src/file_system_agent/front_end/vuetify-template/src/layout/: MainLayOut.vue
src/file_system_agent/front_end/vuetify-template/src/router/: index.js
src/file_system_agent/front_end/vuetify-template/src/views/: DirView.vue
src/file_system_agent/tools/src/file_system_tools/: file_metadata.py  file_type.py  working_dir.py
src/file_system_agent/tools/src/tools_for_agent/: generate_dynamic_tools.py  static_tools.py
src/file_system_agent/tools/tests/: test_directory.py
tools/src/directory/: directory_management.py  walk_dir.py
tools/src/file_system_tools/: file_metadata.py  file_type.py  working_dir.py
tools/src/tools_for_agent/: generate_dynamic_tools.py  static_tools.py
tools/tests/: test_directory.py
