[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "file-system-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Code Glimmer", email = "m15073691589@163.com" }
]
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.121.0",
    "langchain>=1.0.4",
    "langchain-deepseek>=1.0.0",
    "langchain-ollama>=1.0.0",
]

[project.scripts]
file-system-agent = "file_system_agent.file_system_cli.main:main"
file-system-agent-gui = "file_system_agent.backend.main:main"

[tool.hatchling.build.targets.wheel]
packages = ["src/file_system_agent"]
exclude = [
    "src/file_system_agent/tests/",
    "**/__pycache__/",
    "**/*.log",
    "src/file_system_agent/front_end/",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.6.23",
    "mkdocstrings[python]>=0.30.1",
    "pytest>=8.4.2",
]
